--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.3",
     "mongodb": "3.5.6",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.3"
   }
 }
